--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "%run ./0_process_bathy.ipynb"
+    "%run ./0_process_bathymetry.ipynb"
    ]
   },
   {
