--- a/notebooks/1_gather_data.ipynb
+++ b/notebooks/1_gather_data.ipynb
@@ -34,7 +34,7 @@
    },
    "outputs": [],
    "source": [
-    "savename = based + 'data20142018-15min.csv'\n",
+    "savename = based + 'data.csv'\n",
     "dstart = '2014-01-01'; dend = '2019-1-1'\n",
     "tz = 'UTC'  # timezone"
    ]
