--- a/notebooks/1_gather_data.ipynb
+++ b/notebooks/1_gather_data.ipynb
@@ -134,7 +134,8 @@
     "        rain *= 2.54  # convert from inches to centimeters\n",
     "        df[station + ': Rain [cm]'] = rain\n",
     "            \n",
-    "    df.tz_localize(None).to_csv(savename)  # save as a csv file\n",
+    "    df = df.tz_localize(None)\n",
+    "    df.to_csv(savename)  # save as a csv file\n",
     "else:\n",
     "    df = pd.read_csv(savename, parse_dates=True, index_col=0)"
    ]
