--- a/notebooks/_setup.ipynb
+++ b/notebooks/_setup.ipynb
@@ -159,6 +159,8 @@
    "outputs": [],
    "source": [
     "fname = '%sdata.csv' % based\n",
+    "# fname = '/Volumes/GoogleDrive/My Drive/Documents/papers/inprogress/harvey_inflow/old/old/code/data/stations/data.csv'\n",
+    "# fname = '/Volumes/GoogleDrive/My Drive/Documents/papers/inprogress/harvey_inflow/old/old/code/data/oldstations/data2017-15min.csv'\n",
     "if os.path.exists(fname):\n",
     "    df = pd.read_csv(fname, parse_dates=True, index_col=0)\n",
     "    dt = (df.index[1] - df.index[0]).total_seconds()  # time step in seconds\n",
@@ -182,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
