more updates from the shapes

--- a/notebooks/_setup.ipynb
+++ b/notebooks/_setup.ipynb
@@ -37,7 +37,9 @@
     "import shapely.ops\n",
     "import tabs\n",
     "import xarray as xr\n",
-    "from shutil import unpack_archive"
+    "from shutil import unpack_archive\n",
+    "from glob import glob\n",
+    "from scipy.stats import expon, norm"
    ]
   },
   {
@@ -77,11 +79,13 @@
     "based = b + 'stations/'\n",
     "baset = b + 'twdb/'\n",
     "baser = b + 'rain/'\n",
+    "basell = '%s/saved/' % basesf\n",
     "\n",
     "# create directories\n",
     "os.makedirs('../figures', exist_ok=True)\n",
     "os.makedirs(baseb, exist_ok=True)\n",
-    "os.makedirs(baser, exist_ok=True)"
+    "os.makedirs(baser, exist_ok=True)\n",
+    "os.makedirs(basell, exist_ok=True)"
    ]
   },
   {
@@ -121,6 +125,82 @@
     "       11092, 11081, 11080, 11070, 11094, 24240, 24245, 24320, 11110, 11124, 11122, 24390, 24230, 24210, 24220,\n",
     "       11030, 11040, 11010, 11003, 24250, 11150, 11130, 11020, 10066, 10050, 24260, 10060, 10075, 10073, 10064,\n",
     "       10065, 10063, 10090, 10080, 9030, 8010, 8020, 10010, 9010, 10002, 7050, 7070, 7060, 24235]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in TWDB subbasins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TWDB river basins\n",
+    "twdbshapes = 'galv_ws_nad83_prj_albers_equal_area_conic_USGS'\n",
+    "fname = '%s%s/%s.shp' % (basesf, twdbshapes, twdbshapes)\n",
+    "reader = cartopy.io.shapereader.Reader(fname)\n",
+    "basins = reader.records()\n",
+    "shapes_twdbbasins = []  # basins in TWDB inflow estimate\n",
+    "shapes_lkhouston = []\n",
+    "\n",
+    "for basin in basins:\n",
+    "       \n",
+    "    # save all basins in the inflow estimate\n",
+    "    shapes_twdbbasins.append(basin)\n",
+    "\n",
+    "    # separate out Lake Houston drainage basins\n",
+    "    if \"(Lake Houston)\" in basin.attributes['WS_type']: \n",
+    "        shapes_lkhouston.append(basin)\n",
+    "\n",
+    "# outline of twdb basins\n",
+    "shapes_twdbbasins_full = shapely.ops.unary_union([shape.geometry for shape in shapes_twdbbasins])\n",
+    "\n",
+    "# Shape of Lake Houston drainage\n",
+    "shapes_lkhouston_full = shapely.ops.unary_union([shape.geometry for shape in shapes_lkhouston])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in points making up shapes if they exist. They will exist after `00_setup_shapes` notebook is run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = '%s/ll_shapes_gbay_full.txt' % basell\n",
+    "if os.path.exists(fname):\n",
+    "    ll = np.loadtxt(fname)\n",
+    "    shapes_gbay_full = shapely.geometry.Polygon(list(zip(ll[:,0], ll[:,1])))\n",
+    "    \n",
+    "fname = '%s/ll_shapes_trinity_full.txt' % basell\n",
+    "if os.path.exists(fname):\n",
+    "    ll = np.loadtxt(fname)\n",
+    "    shapes_trinity_full = shapely.geometry.Polygon(list(zip(ll[:,0], ll[:,1])))\n",
+    "    \n",
+    "fname = '%s/ll_shapes_twdbbasins_full.txt' % basell\n",
+    "if os.path.exists(fname):\n",
+    "    ll = np.loadtxt(fname)\n",
+    "    shapes_twdbbasins_full = shapely.geometry.Polygon(list(zip(ll[:,0], ll[:,1])))\n",
+    "    \n",
+    "fname = '%s/ll_shapes_lkhouston_full.txt' % basell\n",
+    "if os.path.exists(fname):\n",
+    "    ll = np.loadtxt(fname)\n",
+    "    shapes_lkhouston_full = shapely.geometry.Polygon(list(zip(ll[:,0], ll[:,1])))\n",
+    "    \n",
+    "fname = '%s/ll_shapes_west_full.txt' % basell\n",
+    "if os.path.exists(fname):\n",
+    "    ll = np.loadtxt(fname)\n",
+    "    shapes_west_full = shapely.geometry.Polygon(list(zip(ll[:,0], ll[:,1])))"
    ]
   },
   {
