updates thus far, not yet cleaned up

--- a/notebooks/_setup.ipynb
+++ b/notebooks/_setup.ipynb
@@ -14,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -39,15 +37,16 @@
     "import xarray as xr\n",
     "from shutil import unpack_archive\n",
     "from glob import glob\n",
-    "from scipy.stats import expon, norm"
+    "from scipy.stats import expon, norm\n",
+    "from ast import literal_eval\n",
+    "from pandas.plotting import register_matplotlib_converters\n",
+    "register_matplotlib_converters()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "land_10m = cartopy.feature.NaturalEarthFeature('physical', 'land', '10m',\n",
@@ -91,9 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "date_ssh = pd.Timestamp('2017-8-24 16:00')  # when sea surface starts to raise\n",
@@ -104,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "run buoy_info.py"
@@ -115,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TWDB watershed basin ids for Galveston Bay\n",
@@ -147,21 +140,35 @@
     "basins = reader.records()\n",
     "shapes_twdbbasins = []  # basins in TWDB inflow estimate\n",
     "shapes_lkhouston = []\n",
+    "shapes_bay = []\n",
+    "shapes_ungauged = []\n",
     "\n",
-    "for basin in basins:\n",
+    "for basin in basins:  # aea projection\n",
     "       \n",
     "    # save all basins in the inflow estimate\n",
     "    shapes_twdbbasins.append(basin)\n",
+    "    \n",
+    "    wstype = basin.attributes['WS_type']\n",
     "\n",
     "    # separate out Lake Houston drainage basins\n",
-    "    if \"(Lake Houston)\" in basin.attributes['WS_type']: \n",
+    "    if \"(Lake Houston)\" in wstype: \n",
     "        shapes_lkhouston.append(basin)\n",
+    "    elif wstype == 'Bay watershed':\n",
+    "        shapes_bay.append(basin)\n",
+    "    elif (\"Ungauged\" in wstype) or (\"Ungaged\" in wstype):\n",
+    "        shapes_ungauged.append(basin)\n",
     "\n",
     "# outline of twdb basins\n",
-    "shapes_twdbbasins_full = shapely.ops.unary_union([shape.geometry for shape in shapes_twdbbasins])\n",
+    "shapes_twdbbasins_full_aea = shapely.ops.unary_union([shape.geometry for shape in shapes_twdbbasins])\n",
     "\n",
     "# Shape of Lake Houston drainage\n",
-    "shapes_lkhouston_full = shapely.ops.unary_union([shape.geometry for shape in shapes_lkhouston])"
+    "shapes_lkhouston_full_aea = shapely.ops.unary_union([shape.geometry for shape in shapes_lkhouston])\n",
+    "\n",
+    "# Shape of Galveston Bay itself\n",
+    "shapes_bay_full_aea = shapely.ops.unary_union([shape.geometry for shape in shapes_bay])\n",
+    "\n",
+    "# Shape of Ungauged modeled region\n",
+    "shapes_ungauged_full_aea = shapely.ops.unary_union([shape.geometry for shape in shapes_ungauged])"
    ]
   },
   {
@@ -213,9 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fname = '%sbathy.nc' % baseb\n",
@@ -233,9 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fname = '%sdata.csv' % based\n",
@@ -245,6 +248,45 @@
     "    df = pd.read_csv(fname, parse_dates=True, index_col=0)\n",
     "    dt = (df.index[1] - df.index[0]).total_seconds()  # time step in seconds\n",
     "    dates = df.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in rain indices for regions. This will exist after `1_gather_data` notebook is run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = '%s/radar_rain_combined.nc' % baser\n",
+    "if os.path.exists(fname):\n",
+    "    rain = xr.open_dataset(fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in rain indices for regions. This will exist after `1_gather_data` notebook is run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = '%s/radar.csv' % baser\n",
+    "if os.path.exists(fname):\n",
+    "    radar = pd.read_csv(fname, index_col=0)\n",
+    "    # literal_eval allows reading in lists from csv file\n",
+    "    radar['irain'] = radar['irain'].apply(literal_eval)\n",
+    "    radar['rain [m^3]'] = radar['rain [m^3]'].apply(literal_eval)"
    ]
   }
  ],
