removed comments from data description

--- a/notebooks/2_data_description.ipynb
+++ b/notebooks/2_data_description.ipynb
@@ -163,218 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rain distribution\n",
-    "\n",
-    "### Set up drainage basin regions for plotting and calculating\n",
-    "\n",
-    "First we have the large-scale drainage basin which we will compare with rainfall. We start by downloading the file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# !wget http://www.twdb.texas.gov/mapping/gisdata/doc/Major_River_Basins_Shapefile.zip\n",
-    "    \n",
-    "# unpack_archive('Major_River_Basins_Shapefile.zip', '%s/Major_River_Basins_Shapefile/' % basesf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# basinnamesgb = ['San Jacinto-Brazos', 'San Jacinto', 'Trinity-San Jacinto', 'Trinity']\n",
-    "\n",
-    "# # read in shapefile data and select the basins that we want\n",
-    "# reader = cartopy.io.shapereader.Reader(basesf + 'Major_River_Basins_Shapefile/TWDB_MRBs_2014.shp')\n",
-    "# basins = reader.records()\n",
-    "# basinsgb = []\n",
-    "# for basin in basins:\n",
-    "#     if basin.attributes['basin_name'] in basinnamesgb:\n",
-    "#         basinsgb.append(basin)\n",
-    "\n",
-    "# # combine into one basin. Need buffer because there are small gaps between shapes\n",
-    "# gbfull = shapely.ops.unary_union([basingb.geometry.buffer(0.1) for basingb in basinsgb])\n",
-    "\n",
-    "# # convert gbfull from pc to aea\n",
-    "# gbfullaea = aea.project_geometry(gbfull, pc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next we read in the river basins included in the inflow estimate from Texas Water Development Board:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # TWDB river basins\n",
-    "# twdbshapes = 'galv_ws_nad83_prj_albers_equal_area_conic_USGS'\n",
-    "# fname = '%s%s/%s.shp' % (basesf, twdbshapes, twdbshapes)\n",
-    "# reader = cartopy.io.shapereader.Reader(fname)\n",
-    "# basins = reader.records()\n",
-    "# spgbs = []\n",
-    "# spgbs_model = []\n",
-    "# for basin in basins:\n",
-    "#     if basin.attributes['WS_ID'] in idgb:\n",
-    "#         # save all basins in the inflow estimate\n",
-    "#         spgbs.append(basin)\n",
-    "#         wstype = basin.attributes['WS_type'].split(' ')[0]\n",
-    "#         # separately select out ungauged basins\n",
-    "#         if wstype == 'Ungauged' or wstype == 'Ungaged': \n",
-    "#             spgbs_model.append(basin)\n",
-    "\n",
-    "# # outline of full region\n",
-    "# spgbfull = shapely.ops.unary_union([spgb.geometry for spgb in spgbs])\n",
-    "\n",
-    "# # outline of modeled region\n",
-    "# spgbfull_model = shapely.ops.unary_union([spgb.geometry for spgb in spgbs_model])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Read and arrange rain data\n",
-    "\n",
-    "Download and read in in gridded precipitation data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # create directory\n",
-    "# os.makedirs(baser, exist_ok=True)\n",
-    "\n",
-    "# # this will download the file to the present file location\n",
-    "# !wget https://water.weather.gov/precip/downloads/2017/08/31/nws_precip_last7days_20170831_conus.nc\n",
-    "    \n",
-    "# # move it to data directory\n",
-    "# %mv nws_precip_last7days_20170831_conus.nc $baser"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Read in rain data\n",
-    "# ds = xr.open_dataset('%s/nws_precip_last7days_20170831_conus.nc' % baser)\n",
-    "\n",
-    "# # Set up x and y locations\n",
-    "# X, Y = np.meshgrid(ds['x'].values, ds['y'].values)\n",
-    "\n",
-    "# # convert x and y locations to aea projection\n",
-    "# rainaea = aea.transform_points(stereo, X, Y)\n",
-    "# xrainaea = rainaea[:,:,0]; yrainaea = rainaea[:,:,1]\n",
-    "# # combine together\n",
-    "# xrainaea2 = np.hstack(((xrainaea[:,0]-abs(xrainaea[:,0]-xrainaea[:,1]))[:,np.newaxis],xrainaea))\n",
-    "# yrainaea2 = np.vstack(((yrainaea[0,:]+abs(yrainaea[0,:]-yrainaea[1,:]))[np.newaxis,:],yrainaea))\n",
-    "\n",
-    "# # calculate rain grid cell area\n",
-    "# da = abs(xrainaea2[:,1:] - xrainaea2[:,:-1]) * abs(yrainaea2[1:,:] - yrainaea2[:-1,:])\n",
-    "\n",
-    "# # create Shapely Shapes out of rain grid cells\n",
-    "# # need to convert from inches to cm of rain\n",
-    "# # ds['x'], ds['y'], ds['observation']*2.54\n",
-    "# rainpts = []\n",
-    "# for x, y, z, a in zip(xrainaea.flatten(), yrainaea.flatten(), ds['observation'].values.flatten(), da.flatten()):\n",
-    "#     # 3rd coord is rain in m^3\n",
-    "#     rainpts.append(shapely.geometry.Point(x,y,z*2.54/100*a))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "### Find how much of the rain is in large drainage basin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # find what rain pts the overall gb shape contains\n",
-    "# rainptsbasingb = []\n",
-    "# rainbasingb = 0\n",
-    "# for rainpt in rainpts:\n",
-    "#     if gbfullaea.contains(rainpt):\n",
-    "#         rainptsbasingb.append(rainpt)\n",
-    "#         x, y, r = zip(*rainpt.coords)\n",
-    "#         rainbasingb += r[0]\n",
-    "        \n",
-    "# print(rainbasingb/1000**3)  # in km^3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How much rain fell directly into Galveston Bay? This number is separate from the inflow calculation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # create list of shapefiles that cover Galveston Bay, basinsbay\n",
-    "\n",
-    "# twdbshapes = 'galv_ws_nad83_prj_albers_equal_area_conic_USGS'\n",
-    "# fname = '%s%s/%s.shp' % (basesf, twdbshapes, twdbshapes)\n",
-    "# reader = cartopy.io.shapereader.Reader(fname)\n",
-    "# basins = reader.records()\n",
-    "# basinsbay = []\n",
-    "# for basin in basins:\n",
-    "#     if 'Bay' in basin.attributes['WS_type']:\n",
-    "#         basinsbay.append(basin)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Calculate rainfall directly onto Galveston Bay (should be subtracted from rainbasingb/1000**3 to compare with TWDB)\n",
-    "\n",
-    "# # combine into one basin\n",
-    "# basinsbayaea = shapely.ops.unary_union([basingb.geometry for basingb in basinsbay])\n",
-    "\n",
-    "# raingb = 0\n",
-    "# for rainpt in rainpts:\n",
-    "#     if basinsbayaea.contains(rainpt):\n",
-    "#         x, y, r = zip(*rainpt.coords)\n",
-    "#         raingb += r[0]\n",
-    "        \n",
-    "# print(raingb/1000**3)  # in km^3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "OR, have TWDB give their estimate of the direct rainfall since my estimate and the radar makes most sense to include it."
+    "## Rain distribution"
    ]
   },
   {
@@ -401,27 +190,6 @@
     "dd['lat'] = [float(dd['lat'][i][1:-1]) for i in range(len(dd))]\n",
     "dd['lon'] = [-float(dd['lon'][i][1:-1]) for i in range(len(dd))]\n",
     "dd['wind [m/s]'] = dd['wind [kts]']/1.944"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.DataArray 'rain' ()>\n",
-       "array(1.3783, dtype=float32)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(rain['rain']).sum(axis=0).max()"
    ]
   },
   {
