added ungauged shape to setup

--- a/notebooks/_setup.ipynb
+++ b/notebooks/_setup.ipynb
@@ -204,6 +204,11 @@
     "    ll = np.loadtxt(fname)\n",
     "    shapes_lkhouston_full = shapely.geometry.Polygon(list(zip(ll[:,0], ll[:,1])))\n",
     "    \n",
+    "fname = '%s/ll_shapes_ungauged_full.txt' % basell\n",
+    "if os.path.exists(fname):\n",
+    "    ll = np.loadtxt(fname)\n",
+    "    shapes_ungauged_full = shapely.geometry.Polygon(list(zip(ll[:,0], ll[:,1])))\n",
+    "    \n",
     "fname = '%s/ll_shapes_west_full.txt' % basell\n",
     "if os.path.exists(fname):\n",
     "    ll = np.loadtxt(fname)\n",
