cleaned up calculation

--- a/notebooks/3_calculation.ipynb
+++ b/notebooks/3_calculation.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,15 +304,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16min 38s, sys: 1min 58s, total: 18min 36s\n",
-      "Wall time: 18min 40s\n"
+      "CPU times: user 8min 32s, sys: 59.3 s, total: 9min 31s\n",
+      "Wall time: 9min 35s\n"
      ]
     }
    ],
@@ -439,7 +439,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "for given surface area, date, smean, etc, how much uncertainty does S introduce?"
+    "### Uncertainty\n",
+    "\n",
+    "How much uncertainty do the input parameters introduce?"
    ]
   },
   {
@@ -532,6 +534,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Histograms of the distribution of standard deviation for each instance of the calculation of total inflow. The median of each histogram is printed and included in the paper."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -567,11 +576,16 @@
     }
    ],
    "source": [
-    "plt.hist(std_dates, alpha=0.5, density=True)\n",
-    "plt.hist(std_areas, alpha=0.5, density=True)\n",
-    "plt.hist(std_midgweights, alpha=0.5, density=True)\n",
-    "plt.hist(std_smeans, alpha=0.5, density=True)\n",
-    "plt.hist(std_Vconstant, alpha=0.95, density=True)\n",
+    "fig, ax = plt.subplots(111)\n",
+    "ax.hist(std_dates, alpha=0.5, density=True)\n",
+    "ax.hist(std_areas, alpha=0.5, density=True)\n",
+    "ax.hist(std_midgweights, alpha=0.5, density=True)\n",
+    "ax.hist(std_smeans, alpha=0.5, density=True)\n",
+    "ax.hist(std_Vconstant, alpha=0.95, density=True)\n",
+    "\n",
+    "ax.set_xlabel('Standard deviation due to input parameter')\n",
+    "ax.set_ylabel('Number of instances')\n",
+    "\n",
     "print(np.median(std_dates), np.median(std_areas), np.median(std_midgweights), \n",
     "                    np.median(std_smeans), np.nanmedian(std_Vconstant))\n",
     "                                                                                                                "
@@ -750,9 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the approximate cross-sectional area at the entrance channel, what speed would the water exiting the channel have to be traveling, uniformly across the channel? \n",
-    "\n",
-    "Of course we know that the ADCP measured a lower speed, so some of the water would have been traveling yet faster for it to average to what is in the black line."
+    "For the approximate cross-sectional area at the entrance channel, what speed would the water exiting the channel have to be traveling, uniformly across the channel? "
    ]
   },
   {
@@ -784,7 +796,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# they are very similar\n",
     "(Qchmed/Acs)[dstart:dend].plot(color='k', linewidth=2, label='Q$_{ch}$')\n",
     "(df['g06010: Along [cm/s] (water)']/100)[dstart:dend].plot(figsize=(15,4))\n"
    ]
