now accounting for if twdb subbasin read in as multipolygon

--- a/notebooks/_setup.ipynb
+++ b/notebooks/_setup.ipynb
@@ -145,6 +145,10 @@
     "\n",
     "for basin in basins:  # aea projection\n",
     "       \n",
+    "    # sometimes basin is read in as Multipolygon\n",
+    "    if isinstance(basin.geometry, shapely.geometry.multipolygon.MultiPolygon):\n",
+    "        basin = list(basin.geometry)[0]\n",
+    "\n",
     "    # save all basins in the inflow estimate\n",
     "    shapes_twdbbasins.append(basin)\n",
     "    \n",
