check for rain file existence

--- a/notebooks/1b_gather_data_rain.ipynb
+++ b/notebooks/1b_gather_data_rain.ipynb
@@ -245,25 +245,29 @@
     "\n",
     "# read in August files\n",
     "days = np.arange(25, 32)\n",
-    "for day in days:\n",
-    "    url = 'https://water.weather.gov/precip/downloads/2017/08/%i/nws_precip_1day_201708%i_conus.nc' % (day, day)\n",
-    "    fname = url.split('/')[-1]\n",
+    "# check for first file\n",
+    "if os.path.exists('%s/nws_precip_1day_20170825_conus.nc' % baser):\n",
+    "    for day in days:\n",
+    "        url = 'https://water.weather.gov/precip/downloads/2017/08/%i/nws_precip_1day_201708%i_conus.nc' % (day, day)\n",
+    "        fname = url.split('/')[-1]\n",
     "\n",
-    "    # this will download the file to the present file location\n",
-    "    !wget $url\n",
-    "    # move it to data directory\n",
-    "    %mv $fname $baser\n",
+    "        # this will download the file to the present file location\n",
+    "        !wget $url\n",
+    "        # move it to data directory\n",
+    "        %mv $fname $baser\n",
     "    \n",
     "# read in September files\n",
     "days = np.arange(1, 12)\n",
-    "for day in days:\n",
-    "    url = 'https://water.weather.gov/precip/downloads/2017/09/%s/nws_precip_1day_201709%s_conus.nc' % (str(day).zfill(2), str(day).zfill(2))\n",
-    "    fname = url.split('/')[-1]\n",
+    "# check for last file\n",
+    "if os.path.exists('%s/nws_precip_1day_20170911_conus.nc' % baser):\n",
+    "    for day in days:\n",
+    "        url = 'https://water.weather.gov/precip/downloads/2017/09/%s/nws_precip_1day_201709%s_conus.nc' % (str(day).zfill(2), str(day).zfill(2))\n",
+    "        fname = url.split('/')[-1]\n",
     "\n",
-    "    # this will download the file to the present file location\n",
-    "    !wget $url\n",
-    "    # move it to data directory\n",
-    "    %mv $fname $baser"
+    "        # this will download the file to the present file location\n",
+    "        !wget $url\n",
+    "        # move it to data directory\n",
+    "        %mv $fname $baser"
    ]
   },
   {
